Updated '_posts/2021-11-22-thankful.md' via CloudCannon

--- a/_posts/2021-11-22-thankful.md
+++ b/_posts/2021-11-22-thankful.md
@@ -12,7 +12,7 @@ use_youtube_image: false
 youtube_alternate_image: /uploads/unnamed-13.jpg
 youtube_code:
 ---
-***Music Inspiration - Which song inspires you? Click on link to listen : "Be Thankful for What You Got**"- by William De Vaughn&nbsp;*[CLICK HERE&nbsp;](https://t.e2ma.net/click/qukj8f/y0qeoac/e97hqo){: target="_blank"}&nbsp;&nbsp;*****or "Thank You**"- by Sly & The Family Stone**&nbsp;*&nbsp;[CLICK HERE](https://t.e2ma.net/click/qukj8f/y0qeoac/u18hqo){: target="_blank"}**
+***Music Inspiration - Which song inspires you? Click on link to listen : "Be Thankful for What You Got\*\*"- by William De Vaughn&nbsp;*[CLICK HERE&nbsp;](https://t.e2ma.net/click/qukj8f/y0qeoac/e97hqo){: target="_blank"}&nbsp;&nbsp;*****or "Thank You\*\*"- by Sly & The Family Stone\*\*&nbsp;*&nbsp;[CLICK HERE](https://t.e2ma.net/click/qukj8f/y0qeoac/u18hqo){: target="_blank"}**
 
 **Good Morning\! &nbsp;**
 
