Updated '_posts/2021-11-29-let-it-be.md' via CloudCannon

--- a/_posts/2021-11-29-let-it-be.md
+++ b/_posts/2021-11-29-let-it-be.md
@@ -12,7 +12,7 @@ use_youtube_image: false
 youtube_alternate_image: /uploads/unnamed-14.jpg
 youtube_code:
 ---
-***Music Inspiration for the week:&nbsp; Which song inspires you? Click on link to listen : "Let it Go"&nbsp;**\- by Tim McGraw&nbsp;*[CLICK HERE&nbsp;](https://t.e2ma.net/click/ftvlkd/zwff20l/fp4x0e){: target="_blank"}&nbsp;&nbsp;*****or "Don't Look Back**"- by Boston**&nbsp;*&nbsp;[CLICK HERE](https://t.e2ma.net/click/ftvlkd/zwff20l/vh5x0e){: target="_blank"}**
+***Music Inspiration for the week:&nbsp; Which song inspires you? Click on link to listen : "Let it Go" \*\*- by Tim McGraw&nbsp;*[CLICK HERE&nbsp;](https://t.e2ma.net/click/ftvlkd/zwff20l/fp4x0e){: target="_blank"}&nbsp;&nbsp;*****or "Don't Look Back\*\*"- by Boston\*\*&nbsp;*&nbsp;[CLICK HERE](https://t.e2ma.net/click/ftvlkd/zwff20l/vh5x0e){: target="_blank"}**
 
 **Good Morning\! &nbsp;**
 
@@ -30,7 +30,7 @@ youtube_code:
 
 **P.S.&nbsp;****(This is an on-going blog series based on the book "The Happiness Trap" by Russ Harris.&nbsp;[CLICK HERE](https://t.e2ma.net/click/ftvlkd/zwff20l/7u7x0e){: target="_blank"}**
 
-**R****eal Estate Corner: Speaking of "Letting It Be" - Check out &nbsp;"5 Home Improvements That May Not Pay Off When You Sell\!" (sometimes the best advice is to just... Let it Be\!) &nbsp;[CLICK HERE](https://t.e2ma.net/click/ftvlkd/zwff20l/nn8x0e){: target="_blank"}&nbsp;**
+**R****eal Estate Corner: Speaking of "Letting It Be" - Check out &nbsp;"5 Home Improvements That May Not Pay Off When You Sell\!" (sometimes the best advice is to just… Let it Be\!) &nbsp;[CLICK HERE](https://t.e2ma.net/click/ftvlkd/zwff20l/nn8x0e){: target="_blank"}&nbsp;**
 
 **Thanks for reading and remember:&nbsp;****“Let it be, Let it be, Let it be, Let it be. Whisper words of wisdom let it be.” (Find out the story behind the song:&nbsp;[CLICK HERE](https://t.e2ma.net/click/ftvlkd/zwff20l/3f9x0e){: target="_blank"}&nbsp;)&nbsp;**
 
