Updated '_posts/2021-12-27-breathe.md' via CloudCannon

--- a/_posts/2021-12-27-breathe.md
+++ b/_posts/2021-12-27-breathe.md
@@ -20,7 +20,7 @@ youtube_code:
 
 **I don’t know about you, at the dropping of the ball on New Year's eve, I would normally say “[good riddance](https://t.e2ma.net/click/ba6pmd/zwff20l/nfqy2e){: target="_blank"}” to those unpleasant experiences and get them out of my mind as quickly as possible\!&nbsp; However, I’ve come to realize that it is in those moments of trial and tribulation, there are life lessons to be learned that can help us practice and perfect our actions and techniques so we can better handle other difficult situations in the future.&nbsp; It is, in a nutshell, those life experiences that make us who we are and what we become.**
 
-**Looking back in hindsight, it’s easy to say ... “I should have done this… If only I had done that….”&nbsp; So how do we deal with the inevitable problems and adversities while we are still in the middle of them? &nbsp;**
+**Looking back in hindsight, it’s easy to say … “I should have done this… If only I had done that….”&nbsp; So how do we deal with the inevitable problems and adversities while we are still in the middle of them? &nbsp;**
 
 **In his book,&nbsp;[“The Happiness Trap”](https://t.e2ma.net/click/ba6pmd/zwff20l/37qy2e){: target="_blank"}&nbsp;, Russ Harris recommends a simple breathing technique that seems very&nbsp;[apropos](https://t.e2ma.net/click/ba6pmd/zwff20l/j0ry2e){: target="_blank"}&nbsp;for handling the inevitable bumps in the road that are bound to pop up again in 2022.&nbsp; You’ve all probably heard it before, but it bears repeating: “[take 10 deep breaths](https://t.e2ma.net/click/ba6pmd/zwff20l/zssy2e){: target="_blank"}”.&nbsp; As you exhale slowly and then again as you inhale, concentrate on your breathing and the sensations in your body. As you do this, images from your thinking mind will come and go. Acknowledge them but then refocus your observing self on your breathing. Read more about the techhique&nbsp;[CLICK HERE](https://t.e2ma.net/click/ba6pmd/zwff20l/flty2e){: target="_blank"}**
 
