Updated '_posts/2022-01-03-values.md' via CloudCannon

--- a/_posts/2022-01-03-values.md
+++ b/_posts/2022-01-03-values.md
@@ -20,7 +20,7 @@ youtube_code:
 
 **This quote by Lewis Carroll, from&nbsp;*Alice in Wonderland&nbsp;*says it all.**
 
-**“*Would you tell me, please, which way I ought to go from here?”“That depends a great deal on where you want to get to,” said the Cat.“I don’t much care where...” said Alice.“[Then it doesn’t matter which way you go,” said the Cat.](https://t.e2ma.net/click/3r24md/zwff20l/33f72e){: target="_blank"}***
+**“*Would you tell me, please, which way I ought to go from here?”“That depends a great deal on where you want to get to,” said the Cat.“I don’t much care where…” said Alice.“[Then it doesn’t matter which way you go,” said the Cat.](https://t.e2ma.net/click/3r24md/zwff20l/33f72e){: target="_blank"}***
 
 **If, like Alice, you are not sure where you are headed in this new year, it may help to think about what you don’t want, in other words… what you have already that you don't like about your situation and what you really want to&nbsp;[change](https://t.e2ma.net/click/3r24md/zwff20l/jwg72e){: target="_blank"}&nbsp;in 2022.**
 
@@ -28,8 +28,8 @@ youtube_code:
 
 **In his book,&nbsp;[“The Happiness Trap”](https://t.e2ma.net/click/3r24md/zwff20l/zoh72e){: target="_blank"}&nbsp;, Russ Harris&nbsp;****has a great list of Values and their definitions. For the start of our New Year’s day, Joe and I sat down and made a list of our top 6 values as a starting point before setting up goals for the new year that align with these values.&nbsp; When you have a half hour or so, take a look at the list and see what your top 6 are.&nbsp;[CLICK HERE](https://t.e2ma.net/click/3r24md/zwff20l/fhi72e){: target="_blank"}&nbsp; &nbsp;We'll take a further look at this next week\!**
 
-**Real Estate Corner: Speaking of "Values" -- What are some Amazon alternatives that also provide great values in on-line shopping? Check out the recommendations from Rolling Stone&nbsp; - I learned a few interesting things\! &nbsp;[CLICK HERE](https://t.e2ma.net/click/3r24md/zwff20l/v9i72e){: target="_blank"}&nbsp; &nbsp;**
+**Real Estate Corner: Speaking of "Values" – What are some Amazon alternatives that also provide great values in on-line shopping? Check out the recommendations from Rolling Stone&nbsp; - I learned a few interesting things\! &nbsp;[CLICK HERE](https://t.e2ma.net/click/3r24md/zwff20l/v9i72e){: target="_blank"}&nbsp; &nbsp;**
 
-**Make it a great week and r****emember: "Values are like fingerprints. Nobody's are the same, but you leave 'em all over everything you do"...&nbsp;[Elvis Presley](https://t.e2ma.net/click/3r24md/zwff20l/b2j72e){: target="_blank"}**
+**Make it a great week and r****emember: "Values are like fingerprints. Nobody's are the same, but you leave 'em all over everything you do"…&nbsp;[Elvis Presley](https://t.e2ma.net/click/3r24md/zwff20l/b2j72e){: target="_blank"}**
 
 **Karen & Joe**
