Updated '_posts/2022-02-21-routines.md' via CloudCannon

--- a/_posts/2022-02-21-routines.md
+++ b/_posts/2022-02-21-routines.md
@@ -22,11 +22,11 @@ youtube_code:
 
 **1\. FOCUS ON THINGS YOU CAN CONTROL:&nbsp; Create your standard&nbsp;[wake-up](https://t.e2ma.net/click/37qiqd/zwff20l/rybf6e){: target="_blank"}&nbsp;and&nbsp;[bedtime](https://t.e2ma.net/click/37qiqd/zwff20l/7qcf6e){: target="_blank"}&nbsp;routines as well as&nbsp;[meal time routines](https://t.e2ma.net/click/37qiqd/zwff20l/njdf6e){: target="_blank"}. Set specific, measurable and achievable goals for times you wake up and go to bed, what activites you do in preparation for bed as well as what activities you do when you get up.&nbsp; Also plan out the times you eat, what you will eat and where you will eat it.**
 
-**2\. TAKE TIME TO BE MINDFUL OF YOUR ROUTINES. In the&nbsp;["Happiness Trap"](https://t.e2ma.net/click/37qiqd/zwff20l/3bef6e){: target="_blank"}, that we've been reading the last month or so, author Russ Harris recommends picking a daily routine, such as&nbsp; mundane chores like house cleaning. For example, when you wash the floor, notice each little detail about&nbsp; the job: the swish of the mop, the water in your bucket, the scent of the floor cleaner, the shiny floor when you are done....When your thoughts wander, acknowledge this and then bring your mind back to the activity at hand.&nbsp; Having a set day and time for an activity, as well as paying attention to each little step in your task, will keep you on track, help it feel like a little game you are playing with yourself and hopefully lead to overcoming the urge to put it off\!&nbsp;**
+**2\. TAKE TIME TO BE MINDFUL OF YOUR ROUTINES. In the&nbsp;["Happiness Trap"](https://t.e2ma.net/click/37qiqd/zwff20l/3bef6e){: target="_blank"}, that we've been reading the last month or so, author Russ Harris recommends picking a daily routine, such as&nbsp; mundane chores like house cleaning. For example, when you wash the floor, notice each little detail about&nbsp; the job: the swish of the mop, the water in your bucket, the scent of the floor cleaner, the shiny floor when you are done….When your thoughts wander, acknowledge this and then bring your mind back to the activity at hand.&nbsp; Having a set day and time for an activity, as well as paying attention to each little step in your task, will keep you on track, help it feel like a little game you are playing with yourself and hopefully lead to overcoming the urge to put it off\!&nbsp;**
 
 **Don't forget to structure your day to make the most of your&nbsp;[energy levels](https://t.e2ma.net/click/37qiqd/zwff20l/j4ef6e){: target="_blank"}. You will get more done in your daily routine and it will help you get what you need in terms of rest and relaxation too\!**
 
-**Real Estate Corner: Speaking of "Routine " -- How about checking out the "7 Best Apps to Build Better Habits and Stick to them" - these are easy ways to stay on track\! Check them out:&nbsp;[CLICK HERE](https://t.e2ma.net/click/37qiqd/zwff20l/zwff6e){: target="_blank"}**
+**Real Estate Corner: Speaking of "Routine " – How about checking out the "7 Best Apps to Build Better Habits and Stick to them" - these are easy ways to stay on track\! Check them out:&nbsp;[CLICK HERE](https://t.e2ma.net/click/37qiqd/zwff20l/zwff6e){: target="_blank"}**
 
 **Hope you Enjoyed these tips**
 
