--- a/_posts/2022-08-29-friendly.md
+++ b/_posts/2022-08-29-friendly.md
@@ -8,7 +8,7 @@ enclosure:
 pullquote:
 enclosure_type: video/mp4
 enclosure_time:
-use_youtube_image: true
+use_youtube_image: false
 youtube_alternate_image: /uploads/08c5c49ea12366139aa8bdaa-1224x414.jpg
 youtube_code:
 ---
@@ -16,7 +16,7 @@ youtube_code:
 
 **WORD OF THE WEEK&nbsp;[FRIENDLY](https://youtu.be/cNIg45GZ_ts)**
 
-***"*“Friendship isn't about whom you have known the longest... It's about who came, and never left your side. ♥”*****&nbsp;*[Mikaela Tiu](https://theysaidso.com/quote/mikaela-tiu-friendship-isnt-about-whom-you-have-known-the-longest-its-about-who)**
+***"*“Friendship isn't about whom you have known the longest… It's about who came, and never left your side. ♥”*****&nbsp;*[Mikaela Tiu](https://theysaidso.com/quote/mikaela-tiu-friendship-isnt-about-whom-you-have-known-the-longest-its-about-who)**
 
 **Good Morning Friends,**
 
